--- a/app/index.html
+++ b/app/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
+
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Open Weather Map</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="css/owm-app.css">
     </head>
-  <body ng-app="App">
+  <body ng-app="OWMApp" ng-class="{loading: isLoading}">
     <h1>Weather Map</h1>
-    <a href="templates/home.html">home</a><br /><a href="templates/city.html">City</a>
-    <ng-view></ng-view>
+
+    <a href="#/cities/New York">New York</a>
+    <a href="#/cities/Chicago">Chicago</a>
+    <a href="#/cities/Boston">Boston</a>
+    <a href="#/cities/NotOnList">Unsupported city</a>
+
+ <div class="animate-view-container">
+    <ng-view class="animate-view"></ng-view>
+ </div>
     
-    
-        <script src="..\bower_components\angular\angular.js"></script>
-        <script src="..\bower_components\angular-route\angular-route.js"></script>
-        <script src="js\script.js"></script>
+        <script type="text/javascript" src="bower_components/angular/angular.js"></script>
+        <script type="text/javascript" src="bower_components/angular-route/angular-route.js"></script>
+        <script type="text/javascript" src="bower_components/angular-animate/angular-animate.js"></script>
+        <script type="text/javascript" src="js/owm-app.js"></script>
 </body>
 </html>
